// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SendIpfs > should render form step 1`] = `
<DocumentFragment>
  <section
    data-testid="SendIpfs__form-step"
  >
    <div
      class="sm:mt-8"
    >
      <div
        class="flex flex-col"
      >
        <span
          class="css-3qwsx5"
        >
          IPFS
        </span>
        <ul
          class="css-xa5o6q"
        >
          <li
            class="css-47028"
          />
          <li
            class="css-3ldhk3"
          />
          <li
            class="css-3ldhk3"
          />
          <li
            class="css-3ldhk3"
          />
        </ul>
      </div>
      <div
        class="flex flex-col justify-between sm:flex-row"
      >
        <div
          class="flex items-end justify-between bg-theme-background mt-6 hidden sm:block"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-2xl"
              data-testid="header__title"
            >
              IPFS
            </h1>
            <div
              class="flex items-center text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Store an IPFS hash on the network.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-1iw2tte"
      data-testid="TransactionNetwork"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
        data-testid="TransactionDetail--desktop"
      >
        <div
          class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Cryptoasset
        </div>
        <div
          class="flex items-center font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="css-1i4b0eq"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg
            id="ark"
            viewBox="0 0 36.3 30.6"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-wr7004"
      data-testid="TransactionSender"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
        data-testid="TransactionDetail--desktop"
      >
        <div
          class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Sender
        </div>
        <div
          class="flex items-center font-semibold"
        >
          <div
            class="w-0 flex-1 overflow-auto text-right md:text-left"
          >
            <div
              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
            >
              <span
                class="font-semibold text-base text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="no-ligatures css-u3jrna"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                data-testid="Address__address"
              >
                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center -space-x-1"
      >
        <div
          class="shrink-0 css-8d0u1i"
          data-testid="Avatar"
        >
          <div
            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
          >
            <img
              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-6 pt-6"
    >
      <fieldset
        class="flex min-w-0 flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="hash"
        >
          IPFS Hash
        </label>
        <div
          class=" css-1psxlcd"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              autocomplete="off"
              class="no-ligatures w-full border-none css-1nupw50"
              data-testid="Input__hash"
              name="hash"
              placeholder=" "
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <fieldset
        class="flex min-w-0 flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="fee"
        >
          Transaction Fee
        </label>
        <div
          class="relative"
        >
          <div
            class="css-n29l73"
            disabled=""
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none text-theme-secondary-text css-1nupw50"
                data-testid="InputCurrency"
                disabled=""
                name="fee"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 divide-none"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="-mr-4 flex h-14 w-22 flex-row justify-between border-l text-theme-secondary-700 dark:border-theme-secondary-700 sm:w-10 sm:flex-col border-theme-secondary-300"
                  >
                    <button
                      class="border-r sm:border-r-0 css-1wqyzac"
                      data-testid="InputFeeAdvanced__up"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="css-15txs7d"
                        height="10"
                        width="10"
                      >
                        <svg
                          id="chevron-up-small"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M1 6.975l3.8-3.8c.1-.1.3-.1.4 0l3.8 3.8"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </button>
                    <button
                      class="css-1p5qk9o"
                      data-testid="InputFeeAdvanced__down"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="css-15txs7d"
                        height="10"
                        width="10"
                      >
                        <svg
                          id="chevron-down-small"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </section>
  ,
</DocumentFragment>
`;

exports[`SendIpfs > should render review step 1`] = `
<DocumentFragment>
  <section
    data-testid="SendIpfs__review-step"
  >
    <div
      class="sm:mt-8"
    >
      <div
        class="flex flex-col"
      >
        <span
          class="css-3qwsx5"
        >
          Transaction Review
        </span>
        <ul
          class="css-xa5o6q"
        >
          <li
            class="css-47028"
          />
          <li
            class="css-3ldhk3"
          />
          <li
            class="css-3ldhk3"
          />
          <li
            class="css-3ldhk3"
          />
        </ul>
      </div>
      <div
        class="flex flex-col justify-between sm:flex-row"
      >
        <div
          class="flex items-end justify-between bg-theme-background mt-6 hidden sm:block"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-2xl"
              data-testid="header__title"
            >
              Transaction Review
            </h1>
            <div
              class="flex items-center text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Review the IPFS transaction details before sending
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-1iw2tte"
      data-testid="TransactionNetwork"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
        data-testid="TransactionDetail--desktop"
      >
        <div
          class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Cryptoasset
        </div>
        <div
          class="flex items-center font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="css-1i4b0eq"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg
            id="ark"
            viewBox="0 0 36.3 30.6"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-19rivvh"
      data-testid="TransactionSender"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
        data-testid="TransactionDetail--desktop"
      >
        <div
          class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Sender
        </div>
        <div
          class="flex items-center font-semibold"
        >
          <div
            class="w-0 flex-1 overflow-auto text-right md:text-left"
          >
            <div
              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
            >
              <span
                class="font-semibold text-base text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="no-ligatures css-u3jrna"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                data-testid="Address__address"
              >
                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center -space-x-1"
      >
        <div
          class="shrink-0 css-8d0u1i"
          data-testid="Avatar"
        >
          <div
            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
          >
            <img
              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-19rivvh"
      data-testid="TransactionDetail"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
        data-testid="TransactionDetail--desktop"
      >
        <div
          class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          IPFS Hash
        </div>
        <div
          class="flex items-center font-semibold"
        >
          <span
            class="break-all"
          >
            QmXoypizjW3WknFiJnKLwHCnL72vedxjQkDDP1mXWo6uco
          </span>
        </div>
      </div>
    </div>
    <div
      class="mt-2"
    >
      <div
        class="rounded-lg border border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <div
          class="relative p-4"
        >
          <div
            class="flex flex-col divide-y divide-theme-secondary-300 dark:divide-theme-secondary-800 sm:flex-row sm:divide-x sm:divide-y-0"
          >
            <div
              class="mb-4 flex flex-col justify-center px-4 py-2 text-center sm:mb-0 sm:w-1/2 sm:text-left"
            >
              <span
                class="css-1j6ndo3"
              >
                Transaction Amount
              </span>
              <span
                class="whitespace-nowrap text-md mt-1 font-semibold"
                data-testid="Amount"
              >
                0 DARK
              </span>
            </div>
            <div
              class="flex flex-col justify-center p-2 px-4 pt-6 text-center sm:w-1/2 sm:pt-2 sm:text-right"
            >
              <span
                class="css-1j6ndo3"
              >
                Transaction Fee
              </span>
              <span
                class="whitespace-nowrap text-md mt-1 font-semibold"
                data-testid="Amount"
              >
                0.1 DARK
              </span>
            </div>
          </div>
          <div
            class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 transform"
          >
            <div
              class="ml-px bg-theme-background p-2 text-theme-secondary-900 dark:text-theme-secondary-600"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="plus"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M1 10h18M10 1v18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="justfiy-center flex flex-col items-center rounded-b-lg border-t border-theme-secondary-300 bg-theme-secondary-100 py-6 dark:border-theme-secondary-800 dark:bg-theme-secondary-800"
        >
          <span
            class="css-1j6ndo3"
          >
            Total Amount
          </span>
          <span
            class="whitespace-nowrap text-md font-bold sm:text-lg"
            data-testid="Amount"
          >
            0.1 DARK
          </span>
        </div>
      </div>
    </div>
  </section>
  ,
</DocumentFragment>
`;

exports[`SendIpfs > should render summary step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSuccessful"
  >
    <div
      class="sm:mt-8"
    >
      <div
        class="flex flex-col"
      >
        <span
          class="css-3qwsx5"
        >
          Transaction Created
        </span>
        <ul
          class="css-xa5o6q"
        >
          <li
            class="css-47028"
          />
          <li
            class="css-3ldhk3"
          />
          <li
            class="css-3ldhk3"
          />
          <li
            class="css-3ldhk3"
          />
        </ul>
      </div>
      <div
        class="flex flex-col justify-between sm:flex-row"
      >
        <div
          class="flex items-end justify-between bg-theme-background mt-6 hidden sm:block"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-2xl"
              data-testid="header__title"
            >
              Transaction Created
            </h1>
          </div>
        </div>
      </div>
    </div>
    <svg
      class="hidden w-full md:block"
      viewBox="0 0 548 142"
      x="0"
      xml:space="preserve"
      xmlns="http://www.w3.org/2000/svg"
      y="0"
    >
      <path
        d="M101.3 64.3c-4.6-11.5-13.2-21-24.2-26.7S53.4 30.2 41.4 33c-12.1 2.8-22.8 9.8-30.1 19.7C3.8 62.8.3 75 1.1 87.4c.9 12.4 6.1 24 14.8 32.8 8.7 8.8 20.2 14.3 32.6 15.3s24.7-2.3 34.7-9.5c10.1-7.2 17.2-17.8 20.2-29.8 1-4 1.2-12.5 9.5-12.5h48"
        fill="none"
        stroke="#DBDEE5"
        stroke-linecap="round"
        stroke-width="2"
      />
      <circle
        cx="53.5"
        cy="84.5"
        fill="none"
        r="31.5"
        stroke="#DBDEE5"
        stroke-width="2"
      />
      <path
        d="M80 67S63 79.6 61 81c-2 1.4-6 4.6-6 9v26m19-55S58.1 72.4 56 74s-7.1 2.1-11-1c-3.9-3.1-13-11-13-11m134 26.8c2.8 0 5-2.2 5-5s-2.2-5-5-5-5 2.2-5 5c0 2.7 2.2 5 5 5z"
        fill="none"
        stroke="#DBDEE5"
        stroke-width="2"
      />
      <path
        d="M446.7 65.3c4.6-11.5 13.2-21 24.2-26.7 11-5.7 23.7-7.4 35.7-4.6 12.1 2.8 22.8 9.8 30.1 19.7s10.9 22.2 10.1 34.6c-.9 12.4-6.1 24-14.8 32.8-8.7 8.8-20.2 14.3-32.6 15.3s-24.7-2.3-34.7-9.5c-10.1-7.2-17.2-17.8-20.2-29.8-1-4-1.2-12.5-9.5-12.5h-48"
        fill="none"
        stroke="#DBDEE5"
        stroke-linecap="round"
        stroke-width="2"
      />
      <path
        d="M382 89.8c2.8 0 5-2.2 5-5s-2.2-5-5-5-5 2.2-5 5c0 2.7 2.2 5 5 5z"
        fill="none"
        stroke="#DBDEE5"
        stroke-width="2"
      />
      <circle
        cx="495.5"
        cy="84.5"
        fill="none"
        r="31.5"
        stroke="#DBDEE5"
        stroke-width="2"
      />
      <path
        d="M469 102s17-12.6 19-14c2-1.4 6-4.6 6-9V53m-19 55s15.9-11.4 18-13c2.1-1.6 7.1-2.1 11 1s13 11 13 11"
        fill="none"
        stroke="#DBDEE5"
        stroke-width="2"
      />
      <path
        clip-rule="evenodd"
        d="M410 135v-7h-38v7h-2v-7h-15v-2h15v-18h2v18h38v-8h2v8h10v2h-10v7h-2zm-240 0v-7h-38v7h-2v-7h-10v-2h10v-12h2v12h38v-10h2v10h18v2h-18v7h-2zm-40-31v-4h-4v-2h4v-4h2v4h4v2h-4v4h-2zm280-45V48h-10v-2h10V8h-38v11h-2V8h-11V6h11V0h2v6h38V0h2v6h38V0h2v6h8v2h-8v21h-2V8h-38v38h16v2h-16v11h-2zm-280 0V48h-14v-2h14V8H92v11h-2V8H72V6h18V0h2v6h38V0h2v6h11v2h-11v38h9v2h-9v11h-2zm80-33V8h-18V6h18V0h2v6h16v2h-16v18h-2zm265-14V8h-4V6h4V2h2v4h4v2h-4v4h-2zm-230 0V8h-4V6h4V2h2v4h4v2h-4v4h-2z"
        fill="#DBDEE5"
        fill-rule="evenodd"
      />
      <path
        d="M237 96.8s9.4 9.5 10 10c.1.1.3.2.5.3.2.1.4.1.5.1s.4 0 .5-.1c.2-.1.3-.2.5-.3 2-1.8 2.6-2.2 2-3-.8-1-8.4-8.4-9-9-.2-.2-.4-.4-.5-.7-.1-.3-.2-.5-.2-.8s.1-.6.2-.8c.1-.3.3-.5.5-.7 1.2-1.2 37.2-36.3 38-37 .2-.2.4-.4.7-.5.3-.1.5-.2.8-.2s.6.1.8.2c.3.1.5.3.7.5 1 .9 9 9 9 9"
        fill="none"
        stroke="#289548"
        stroke-dasharray="4,4"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
      <path
        d="M245 110.8c-.9-.9-12.5-12.7-13-13-.5-.3-1.3-.5-2 1s-7.9 18-8.5 19.2c-1.2 2.8 2.5 5.5 4.5 4.8 2-.8 19.1-8.7 20-9 1.1-.5 2.1-1.2 3-2 1-.9 45.2-46.2 46-47 .8-.8 1.6-2.2 1-3s-12.3-12.2-13-13c-.5-.5-1.3-.8-2-.8s-1.5.3-2 .8c-1.2 1.3-46 46-46 46"
        fill="none"
        stroke="#212225"
        stroke-linecap="round"
        stroke-width="2"
      />
      <path
        d="M218.2 125.8c-.4.4-.3 1 .1 1.4.4.4 1 .3 1.4-.1l-1.5-1.3zm5.1-2.6c.4-.4.3-1-.1-1.4-.4-.4-1-.3-1.4.1l1.5 1.3zm-3.5 4l3.5-4-1.5-1.3-3.5 4 1.5 1.3z"
        fill="#212225"
      />
      <path
        d="M318.8 7.9l1.2-1.2c.4-.5 1-.9 1.6-1.1.6-.3 1.3-.4 1.9-.4s1.3.1 1.9.4c.6.3 1.1.7 1.6 1.1 1.7 1.7 7.2 7.1 10 10 .5.4.9 1 1.2 1.6.3.6.4 1.3.4 1.9 0 .7-.1 1.3-.4 1.9-.3.6-.7 1.1-1.2 1.6-1.3 1.3-31.7 32.9-34 35-1.7 1.5-3 .7-4 0-1-.8-13.5-13.2-14-14-.5-.8-1-1.8 0-3s19.5-19.5 28.8-28.8c.2-.2.4-.4.6-.7l.3-.9c0-.3 0-.6-.1-.9-.1-.3-.3-.5-.5-.8-.9-1.1-1.9-2.1-3-3-.2-.2-.4-.4-.7-.5-.3-.1-.5-.2-.8-.2-.3 0-.6.1-.8.2-.3.1-.5.3-.7.5-1.3 1.2-41 41-42 42s-.5 1.5 0 2l2 2"
        fill="none"
        stroke="#212225"
        stroke-linecap="round"
        stroke-width="2"
      />
      <path
        d="M192 127h162"
        fill="none"
        stroke="#212225"
        stroke-width="2"
      />
    </svg>
    <p
      class="hidden text-theme-secondary-text md:block"
    >
      Your transaction has been created successfully. Participants can now sign the transaction to broadcast it to the network. The following is relevant information for your transaction:
    </p>
    <div
      class="flex flex-col overflow-hidden rounded-xl md:hidden"
    >
      <div
        class="css-1qh812f"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg
            id="circle-check-mark"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
                stroke-miterlimit="10"
              />
              <path
                d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
        <span>
          Success
        </span>
      </div>
      <div
        class="css-k5jr4t"
      >
        Your transaction has been created successfully. Participants can now sign the transaction to broadcast it to the network. The following is relevant information for your transaction:
      </div>
    </div>
    <div>
      <div
        class="no-ligatures css-1v497ib"
        data-testid="TransactionDetail"
      >
        <div
          class="w-40 flex-1 space-y-2 whitespace-nowrap"
          data-testid="TransactionDetail--desktop"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            ID
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="flex w-full items-center space-x-3 overflow-hidden"
            >
              <span
                class="overflow-hidden"
              >
                <a
                  class="ring-focus group inline-block flex items-center css-1jnqd87"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href="https://test.arkscan.io/transactions/7d5eb5fc782c766af4af5eee22b1d7f7d6d1cdd7bab166df567f315d72e1db07"
                  rel="noopener noreferrer"
                >
                  <span
                    class="css-1lmkmoz"
                  >
                    <span
                      class="no-ligatures css-0"
                      data-testid="TruncateMiddle"
                    >
                      7d5eb5fc782c766af4af5eee22…d7bab166df567f315d72e1db07
                    </span>
                  </span>
                  <div
                    class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                    data-testid="Link__external"
                    height="16"
                    width="16"
                  >
                    <svg
                      id="arrow-external"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </a>
              </span>
              <span
                class="flex text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <button
                  class="ring-focus relative focus:outline-none"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg
                      id="copy"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                        />
                        <path
                          d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                        />
                      </g>
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="no-ligatures css-19rivvh"
        data-testid="TransactionType"
      >
        <div
          class="w-40 flex-1 space-y-2 whitespace-nowrap"
          data-testid="TransactionDetail--desktop"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Transaction Type
          </div>
          <div
            class="flex items-center font-semibold"
          >
            IPFS
          </div>
        </div>
        <div
          class="border-theme-text text-theme-text dark:border-theme-secondary-600 dark:text-theme-secondary-600 ring-theme-background duration-100 css-14jhlj1"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="ipfs"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-width="2"
              >
                <path
                  d="M10 19l-8.3-4.5v-9L10 1l8.3 4.5v9L10 19z"
                  stroke-linejoin="round"
                />
                <path
                  d="M7.2 8.827L1.7 5.7M12.8 8.853L18.3 5.7"
                  stroke-linecap="round"
                />
                <circle
                  cx="10"
                  cy="9.7"
                  r="2.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="no-ligatures css-19rivvh"
        data-testid="TransactionNetwork"
      >
        <div
          class="w-40 flex-1 space-y-2 whitespace-nowrap"
          data-testid="TransactionDetail--desktop"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Cryptoasset
          </div>
          <div
            class="flex items-center font-semibold"
          >
            ARK Devnet
          </div>
        </div>
        <div
          aria-label="ARK Devnet"
          class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
          data-testid="NetworkIcon-ARK-ark.devnet"
        >
          <div
            class="css-1i4b0eq"
            data-testid="NetworkIcon__icon"
            height="20"
            width="20"
          >
            <svg
              id="ark"
              viewBox="0 0 36.3 30.6"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="no-ligatures css-19rivvh"
        data-testid="TransactionSuccessful__musig-address"
      >
        <div
          class="w-40 flex-1 space-y-2 whitespace-nowrap"
          data-testid="TransactionDetail--desktop"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            <div
              class="flex items-center space-x-2"
            >
              <span>
                Multisignature Address
              </span>
               
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="multi-signature"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M3.1 9.65c1.1 0 2.1-1 2.1-2.1s-1-2.1-2.1-2.1-2.1 1-2.1 2.1.9 2.1 2.1 2.1h0zM6.4 13.25c-.8-1.8-2.9-2.6-4.7-1.9-.2.1-.5.2-.7.4M16.9 9.65c-1.1 0-2.1-1-2.1-2.1s1-2.1 2.1-2.1 2.1 1 2.1 2.1-.9 2.1-2.1 2.1h0zM13.6 13.25c.8-1.8 2.9-2.6 4.7-1.9.2.1.5.2.7.4"
                    />
                    <g>
                      <path
                        d="M14.75 15.75c-.3-2.6-2.8-4.5-5.4-4.1-2.2.3-3.8 2-4.1 4.1M10.003 9.65c1.5 0 2.7-1.2 2.7-2.7s-1.2-2.7-2.7-2.7-2.7 1.2-2.7 2.7h0c-.1 1.5 1.1 2.7 2.7 2.7z"
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="flex grow items-center space-x-2 text-theme-primary-300 dark:text-theme-secondary-600"
            >
              <div
                class="w-0 flex-1 text-right md:text-left"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                    data-testid="Address__address"
                  >
                    DNzn2Rg6jCg3RCZnUyYjhbhvAgSWGwaMbH
                  </span>
                </div>
              </div>
              <button
                class="ring-focus relative focus:outline-none"
                data-ring-focus-margin="-m-1"
                data-testid="clipboard-icon__wrapper"
                type="button"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="copy"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                      />
                      <path
                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                      />
                    </g>
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex items-center"
        >
          <div
            class="shrink-0 css-8d0u1i"
            data-testid="Avatar"
          >
            <div
              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
            >
              <img
                alt="DNzn2Rg6jCg3RCZnUyYjhbhvAgSWGwaMbH"
                src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(255, 152, 0)" width="100" height="100"/><circle r="40" cx="60" cy="70" fill="rgb(255, 193, 7)"/><circle r="45" cx="50" cy="30" fill="rgb(0, 188, 212)"/><circle r="35" cx="30" cy="40" fill="rgb(233, 30, 99)"/></svg>"
                title="DNzn2Rg6jCg3RCZnUyYjhbhvAgSWGwaMbH"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="no-ligatures css-19rivvh"
        data-testid="TransactionSender"
      >
        <div
          class="w-40 flex-1 space-y-2 whitespace-nowrap"
          data-testid="TransactionDetail--desktop"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Sender
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="w-0 flex-1 overflow-auto text-right md:text-left"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                  data-testid="Address__address"
                >
                  DNzn2Rg6jCg3RCZnUyYjhbhvAgSWGwaMbH
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center -space-x-1"
        >
          <div
            class="shrink-0 css-8d0u1i"
            data-testid="Avatar"
          >
            <div
              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
            >
              <img
                alt="DNzn2Rg6jCg3RCZnUyYjhbhvAgSWGwaMbH"
                src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(255, 152, 0)" width="100" height="100"/><circle r="40" cx="60" cy="70" fill="rgb(255, 193, 7)"/><circle r="45" cx="50" cy="30" fill="rgb(0, 188, 212)"/><circle r="35" cx="30" cy="40" fill="rgb(233, 30, 99)"/></svg>"
                title="DNzn2Rg6jCg3RCZnUyYjhbhvAgSWGwaMbH"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="no-ligatures css-19rivvh"
        data-testid="TransactionRecipients"
      >
        <div
          class="w-40 flex-1 space-y-2 whitespace-nowrap"
          data-testid="TransactionDetail--desktop"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Recipient
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="w-0 flex-1 text-right md:text-left"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              />
            </div>
          </div>
        </div>
        <div
          class="flex items-center -space-x-1"
        >
          <div
            class="shrink-0 css-8d0u1i"
            data-testid="Avatar"
          >
            <div
              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
            />
          </div>
        </div>
      </div>
      <div
        class="no-ligatures css-19rivvh"
        data-testid="TransactionRecipients"
      >
        <div
          class="w-40 flex-1 space-y-2 whitespace-nowrap"
          data-testid="TransactionDetail--desktop"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Multisignature Participants (2)
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="css-1sfei0c"
            >
              <div
                class="-mt-3 css-1m6rt2i"
                role="table"
              >
                <table
                  cellpadding="0"
                  class="table-auto"
                >
                  <thead>
                    <tr
                      class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                      role="row"
                    >
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                        colspan="1"
                        data-testid="table__th--0"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top hidden"
                        >
                          <div
                            class=""
                          >
                            Avatar
                          </div>
                        </div>
                      </th>
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                        colspan="1"
                        data-testid="table__th--1"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top hidden"
                        >
                          <div
                            class=""
                          >
                            Address
                          </div>
                        </div>
                      </th>
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                        colspan="1"
                        data-testid="table__th--2"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top hidden"
                        >
                          <div
                            class=""
                          >
                            Amount
                          </div>
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    role="rowgroup"
                  >
                    <tr
                      class="flex items-center border-b border-dashed border-theme-secondary-300 py-4 last:border-b-0 dark:border-theme-secondary-800"
                      data-testid="recipient-list__recipient-list-item"
                    >
                      <td
                        class="mr-3 table-cell md:hidden"
                      />
                      <td
                        class="hidden md:table-cell"
                      >
                        <div
                          class="shrink-0 css-y5oe37"
                          data-testid="Avatar"
                        >
                          <div
                            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                          >
                            <img
                              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="w-28 flex-1 justify-end md:ml-4"
                      >
                        <div
                          class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                        >
                          <span
                            class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                            data-testid="Address__address"
                          >
                            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                          </span>
                        </div>
                      </td>
                      <td
                        class="ml-2 table-cell md:hidden"
                      >
                        <div
                          class="shrink-0 css-1vy2z2u"
                          data-testid="Avatar"
                        >
                          <div
                            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                          >
                            <img
                              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="hidden md:table-cell"
                      />
                    </tr>
                    <tr
                      class="flex items-center border-b border-dashed border-theme-secondary-300 py-4 last:border-b-0 dark:border-theme-secondary-800"
                      data-testid="recipient-list__recipient-list-item"
                    >
                      <td
                        class="mr-3 table-cell md:hidden"
                      />
                      <td
                        class="hidden md:table-cell"
                      >
                        <div
                          class="shrink-0 css-y5oe37"
                          data-testid="Avatar"
                        >
                          <div
                            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                          >
                            <img
                              alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(244, 67, 54)" width="100" height="100"/><circle r="50" cx="20" cy="50" fill="rgb(205, 220, 57)"/><circle r="60" cx="0" cy="70" fill="rgb(0, 188, 212)"/><circle r="55" cx="80" cy="30" fill="rgb(76, 175, 80)"/></svg>"
                              title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="w-28 flex-1 justify-end md:ml-4"
                      >
                        <div
                          class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                        >
                          <span
                            class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                            data-testid="Address__address"
                          >
                            D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                          </span>
                        </div>
                      </td>
                      <td
                        class="ml-2 table-cell md:hidden"
                      >
                        <div
                          class="shrink-0 css-1vy2z2u"
                          data-testid="Avatar"
                        >
                          <div
                            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                          >
                            <img
                              alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(244, 67, 54)" width="100" height="100"/><circle r="50" cx="20" cy="50" fill="rgb(205, 220, 57)"/><circle r="60" cx="0" cy="70" fill="rgb(0, 188, 212)"/><circle r="55" cx="80" cy="30" fill="rgb(76, 175, 80)"/></svg>"
                              title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="hidden md:table-cell"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="no-ligatures css-19rivvh"
        data-testid="TransactionDetail"
      >
        <div
          class="w-40 flex-1 space-y-2 whitespace-nowrap"
          data-testid="TransactionDetail--desktop"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Minimum Required Signatures
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="whitespace-nowrap"
            >
              <span>
                2 
              </span>
              <span
                class="whitespace text-theme-secondary-700"
                data-testid="MultiSignatureSuccessful__publicKeys"
              >
                out of 2
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="no-ligatures css-fezbvb"
        data-testid="TransactionFee"
      >
        <div
          class="w-40 flex-1 space-y-2 whitespace-nowrap"
          data-testid="TransactionDetail--desktop"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Transaction Fee
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
  </section>
  ,
</DocumentFragment>
`;
